login with email and password and remember me using local storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ dependencies:
   http: ^1.2.1  # Latest version
   intl: ^0.19.0  # Latest version
   logger: ^2.3.0  # Latest version
+  lottie: ^3.1.2
   url_launcher: ^6.2.6  # Latest version
+  connectivity_plus: ^6.0.3
   flutter_native_splash: ^2.4.0
   smooth_page_indicator: ^1.1.0
   
@@ -27,6 +29,12 @@ dependencies:
   readmore: ^3.0.0
   carousel_slider: ^4.2.1
   flutter_rating_bar: ^4.0.1
+
+  # firebase
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
+  firebase_storage: ^12.0.0
 
 dev_dependencies:
   flutter_test:
